--- a/src/resources/css/info.css
+++ b/src/resources/css/info.css
@@ -40,7 +40,23 @@
 
 @media (max-width: 1024px) {
   .info-overlay {
-    padding-bottom: calc(146px + env(safe-area-inset-bottom));
+    padding-bottom: calc(138px + env(safe-area-inset-bottom));
+  }
+
+  .info-card {
+    width: 100%;
+    margin: 0;
+    border-radius: 12px 12px 0 0;
+    padding-bottom: 30px;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+  }
+
+  @media (orientation: landscape) {
+    .info-overlay {
+      padding-bottom: calc(100px + env(safe-area-inset-bottom));
+    }
   }
 }
 
@@ -57,7 +73,7 @@
   .info-card {
     position: fixed;
     bottom: 172px;
-    width: 480px;
+    width: 520px;
     left: auto;
     right: 20px;
     border-radius: 12px;
